--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Gets the dominant color of an image using Jimp",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node lib/index.js"
   },
   "repository": {
     "type": "git",
